# haskell

./: .gitignore  .project-settings.yml  Align.hs  Colocate.hs  Columns.hs  Old.hs  Prefix.hs  Ranges.hs  Saynumber.hs  Unzip.hs  Utils.hs  colocate.hs  fMonad.hs  format.hs  ghcbuild.sh  ghcbuild_all.sh  ghcbuild_module.sh  hls.hs  monads.hs  old.hs  parsers.hs  prefix.hs  ranges.hs  squeeze.hs
QDA/: NameManip.hs  Path.hs  PathUtils.hs
Unzip/: Main.hs  Unzip.hs  make
ds-utils/: CHANGELOG.md  README.md  package.yaml
graph/: Makefile  graph.cabal  stack.yaml
graph/src/: Graph.hs  Main.hs  Project.hs  Utils.hs
graph/toplevel/code/src/: solution.sln
graph/toplevel/code/src/A/: project.info
graph/toplevel/code/src/A/inc/: apple.hpp  banana.hpp  grape.hpp  orange.hpp  pear.hpp
graph/toplevel/code/src/A/lib/: CL.read.1.tlog
graph/toplevel/code/src/A/src/: apple.cpp  banana.cpp  grape.cpp  orange.cpp  pear.cpp
graph/toplevel/code/src/B/: project.info
graph/toplevel/code/src/B/inc/: bean.hpp  broccoli.hpp  carrot.hpp  potato.hpp
graph/toplevel/code/src/B/lib/: CL.read.1.tlog
graph/toplevel/code/src/B/src/: bean.cpp  broccoli.cpp  carrot.cpp  corn.cpp  potato.cpp
graph/toplevel/code/src/C/: project.info
graph/toplevel/code/src/C/inc/: bed.hpp  chair.hpp  desk.hpp  door.hpp  shelf.hpp
graph/toplevel/code/src/C/lib/: CL.read.1.tlog
graph/toplevel/code/src/C/src/: bed.cpp  chair.cpp  desk.cpp  door.cpp  shelf.cpp
graph/toplevel/code/src/D/: project.info
graph/toplevel/code/src/D/inc/: hat.hpp  pants.hpp  scarf.hpp  shirt.hpp  sock.hpp
graph/toplevel/code/src/D/lib/: CL.read.1.tlog
graph/toplevel/code/src/D/src/: hat.cpp  pants.cpp  scarf.cpp  shirt.cpp  sock.cpp
graph/toplevel/code/src/F/inc/: orange.hpp
par/: Makefile  par.cabal  (+1 more)
sfmt/: Makefile  sfmt.cabal  stack.yaml
sfmt/src/: Hyphen.hs  Justify.hs  Main.hs  Makefile  Rules.hs  SmartFormat.hs  Test.hs  Wrap.hs
(+7 files in other folders)
