name:                graph
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/graph#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable graph
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       attoparsec,
                       base >= 4.7 && < 5,
                       containers,
                       deepseq,
                       fgl,
                       filemanip,
                       filepath,
                       graphviz,
                       MissingH,
                       safe,
                       text
