name:                sfmt
version:             0.1.0.0
synopsis:            Smart line wrapper for code comments
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              David P. Sicilia
maintainer:          dpsicilia@gmail.com
copyright:           2016 David P. Sicilia
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sfmt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       SmartFormat,
                       Hyphen
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       ds-utils,
                       hyphenation,
                       filepath,
                       safe,
                       split
